# jsPackCompress

./: .gitignore  .gitmodules  LICENSE  README.md  eslint.config.js  index.js  jsconfig.json  package-lock.json  package.json  rollup.config.js  test.js
.github/workflows/: npm-publish.yml
src/: escaper.js  packer.js  sorter.js  templates.js
src/unpacker/: readme.md  small.js  small.min.js  small_lut.js  small_lut.min.js  universal.js  universal.min.js
zopfli/: CMakeLists.txt  index.js  rollup.config.js  wrapper.js  zopfli.wasm  zopfli.wasm.js
zopfli/scripts/: wasm2js.js
zopfli/src/: module.c
